crates/sui-graphql-macros/tests/compile/schema_validation_array_on_non_list.stderr
error: Cannot use '[]' on non-list field 'address' (type 'SuiAddress')
 --> tests/compile/schema_validation_array_on_non_list.rs:7:20
  |
7 |     #[field(path = "object.address[]")]
  |                    ^^^^^^^^^^^^^^^^^^
